--- a/statamic/_themes/main/templates/neighborhood_individual.html
+++ b/statamic/_themes/main/templates/neighborhood_individual.html
@@ -107,6 +107,8 @@
 	<section id="other_neighborhoods" class="bg-gray">
 		<div class="container">
 			<div class="section-title">OTHER NEIGHBORHOODS</div>
+
+
 			<ul class="grid">
 				{{ entries:listing folder="neighborhoods/individual_neighborhoods" conditions="url:!{url}" }}	
 				{{ theme:partial src="neighborhood_tile" use_context="true" }}
@@ -114,3 +116,168 @@
 			</ul>
 		</div>
 	</section>
+
+	<script type="text/javascript">
+
+
+
+function initialize() {
+  var locations = [
+  {{ entries:listing folder="properties/new-york/sale|properties/new-york/rental" conditions="property_location:{title}, streeteasy_status:active||in-contract" }}
+  {{ if !no_results }}
+  [
+  '{{ title }}', 
+  {{ location }}
+  {{ latitude}},
+  {{ longitude }}{{/location}},
+  '{{url}}',
+  '{{ preview_image }}',
+  {{ if openhouse == "1" }}'../../_themes/main/img/map_marker_red.svg'{{ else }}'../../_themes/main/img/map_marker_green.svg'{{endif}},
+  '{{ if currency == "dollars" }}${{ elseif currency == "sterling" }}£{{ elseif currency == "euros" }}€{{ elseif currency == "none" }}{{ else }}${{ endif }}{{ if streeteasy_type == "rental"}}{{ price|format_number }}/month{{ else }}{{ price|format_number }}{{ endif }}',
+  '{{ property_type }}',
+  '{{ sqft|format_number }} ft',
+  '{{ property_location }}'
+  ],
+  {{ endif }}
+  {{ /entries:listing }}
+  ];
+
+  map = new google.maps.Map(document.getElementById('map'), {
+    center: {lat: {{ location }}{{latitude}}{{/location}}, lng: {{ location }}{{longitude}}{{/location}}},
+    zoom: 14,
+    scrollwheel: false,
+    styles: [
+    	{"featureType":"water","elementType":"geometry","stylers":[{"color":"#e9e9e9"},{"lightness":17}]},
+    	{"featureType":"landscape","elementType":"geometry","stylers":[{"color":"#f5f5f5"},{"lightness":20}]},
+    	{"featureType":"road.highway","elementType":"geometry.fill","stylers":[{"color":"#ffffff"},{"lightness":17}]},
+    	{"featureType":"road.highway","elementType":"geometry.stroke","stylers":[{"color":"#ffffff"},{"lightness":29},{"weight":0.2}]},
+    	{"featureType":"road.arterial","elementType":"geometry","stylers":[{"color":"#ffffff"},{"lightness":18}]},
+    	{"featureType":"road.local","elementType":"geometry","stylers":[{"color":"#ffffff"},{"lightness":16}]},
+    	{"featureType":"poi","elementType":"geometry","stylers":[{"color":"#f5f5f5"},{"lightness":21}]},
+    	{"featureType":"poi.park","elementType":"geometry","stylers":[{"color":"#dedede"},{"lightness":21}]},{"elementType":"labels.text.stroke","stylers":[{"visibility":"on"},{"color":"#ffffff"},{"lightness":16}]},{"elementType":"labels.text.fill","stylers":[{"saturation":36},{"color":"#333333"},{"lightness":40}]},{"elementType":"labels.icon","stylers":[{"visibility":"off"}]},
+    	{"featureType":"transit","elementType":"geometry","stylers":[{"color":"#f2f2f2"},{"lightness":19}]},
+    	{"featureType":"administrative","elementType":"geometry.fill","stylers":[{"color":"#fefefe"},{"lightness":20}]},
+    	{"featureType":"administrative","elementType":"geometry.stroke","stylers":[{"color":"#fefefe"},{"lightness":17},{"weight":1.2}]}
+    ]
+  });
+
+	
+	var boundaries = 
+	{
+	  "type": "FeatureCollection",
+	  "features": [
+	    {
+	      "type": "Feature",
+	      "geometry": {
+	        "type": "Polygon",
+	        "coordinates": [
+	          [
+	          	{{ border_coordinates }}
+	            [ {{ longitude_latitude }} ],
+	          	{{ /border_coordinates }}
+	          ]
+	        ]
+	      }
+	    }
+	  ]
+	};
+
+	map.data.addGeoJson(boundaries);
+	map.data.setStyle({
+    fillColor: '#8AF2D5',
+    strokeWeight: 1,
+    fillOpacityopacity: 1,
+    strokeColor: '#009B77'
+  });
+
+  var infowindow = new google.maps.InfoWindow();
+  var bounds = new google.maps.LatLngBounds();
+  var markers = [];
+
+  {{ entries:listing folder="properties/new-york/sale|properties/new-york/rental" conditions="property_location:{title}, streeteasy_status:active||in-contract" }}
+  {{ if !no_results }}
+
+  for (i = 0; i < locations.length; i++) {
+
+    var title = locations[i][0];
+    var lat = locations[i][1];
+    var long = locations[i][2];
+    var url = locations[i][3];
+    var image = locations[i][4];
+    var icon = locations[i][5];
+    var price = locations[i][6];
+    var type = locations[i][7];
+    var size = locations[i][8];
+    var location = locations[i][9];
+    var content = 
+    '<a href=' + '"' + url + '"' + 'class=' + '"' + 'property_box map' + '"' + '>' +
+      '<div class="image-wrap">' +
+        '<div class="preview-image" style=' + '"background-image: url(' + image + '">' + 
+        '</div>' +
+      '</div>' +
+      
+      '<div class=' + '"' + 'property_tile_info' + '"' + '>' +
+        '<div class=' + '"' + 'top-info' + '"' + '>' +
+          '<span class=' + '"' + 'prop-title' + '"' + '>' + title + '</span>' +
+          '<div class=' + '"' + 'spacer' + '"' + '>' +'</div>' +
+          '<span class=' + '"' + 'prop-price' + '"' + '>' + price + '</span>' +
+          '<div class=' + '"' + 'spacer' + '"' + '>' +'</div>' +
+          '<span class=' + '"' + 'prop-details' + '"' + '>' + type + '</span>' +
+          '<div class=' + '"' + 'spacer' + '"' + '>' +'</div>' +
+          '<span class=' + '"' + 'prop-details' + '"' + '>' + size + '<sup>2</sup>' + '</span>' +
+          '<div class=' + '"' + 'spacer' + '"' + '>' +'</div>' +
+          '<span class=' + '"' + 'prop-location' + '"' + '>' + location + '</span>' +
+        '</div>' +
+        '<div class=' + '"' + 'bottom-info' + '"' + '>' +
+        '</div>' +
+      '</div>' +
+    '</a>';
+
+    var infowindow = new google.maps.InfoWindow();
+
+    markers.push(infowindow);
+
+    marker = new google.maps.Marker({
+      position: new google.maps.LatLng(locations[i][1], locations[i][2]),
+      map: map,
+      icon: icon  
+    });
+
+    bounds.extend(marker.position);
+
+    google.maps.event.addListener(marker, 'click', (function (marker, i) {
+      return function () {
+        infowindow.setContent(content);
+        infowindow.open(map, marker);
+      }
+    })(marker, i));
+
+    google.maps.event.addListener(map, "click", function(event) {
+        for (var i = 0; i < markers.length; i++ ) {  //I assume you have your infoboxes in some array
+             markers[i].close();
+        }
+    });
+  }
+
+
+  map.fitBounds(bounds);
+
+  var listener = google.maps.event.addListener(map, "idle", function () {
+    // map.setZoom(13);
+    google.maps.event.removeListener(listener);
+  });
+
+  {{ endif }}
+  {{ /entries:listing }}
+
+}
+
+function loadScript() {
+  var script = document.createElement('script');
+  script.type = 'text/javascript';
+  script.src = 'https://maps.googleapis.com/maps/api/js?key=AIzaSyDNoSfsI1ielEAA_2AX1XgZAb8eMaXG6Y4&' + 'callback=initialize';
+  document.body.appendChild(script);
+}
+
+window.onload = loadScript();
+</script>
