--- a/statamic/_themes/main/templates/properties.html
+++ b/statamic/_themes/main/templates/properties.html
@@ -140,12 +140,13 @@ function initialize() {
     styles: [{"featureType":"water","elementType":"geometry","stylers":[{"color":"#e9e9e9"},{"lightness":17}]},{"featureType":"landscape","elementType":"geometry","stylers":[{"color":"#f5f5f5"},{"lightness":20}]},{"featureType":"road.highway","elementType":"geometry.fill","stylers":[{"color":"#ffffff"},{"lightness":17}]},{"featureType":"road.highway","elementType":"geometry.stroke","stylers":[{"color":"#ffffff"},{"lightness":29},{"weight":0.2}]},{"featureType":"road.arterial","elementType":"geometry","stylers":[{"color":"#ffffff"},{"lightness":18}]},{"featureType":"road.local","elementType":"geometry","stylers":[{"color":"#ffffff"},{"lightness":16}]},{"featureType":"poi","elementType":"geometry","stylers":[{"color":"#f5f5f5"},{"lightness":21}]},{"featureType":"poi.park","elementType":"geometry","stylers":[{"color":"#dedede"},{"lightness":21}]},{"elementType":"labels.text.stroke","stylers":[{"visibility":"on"},{"color":"#ffffff"},{"lightness":16}]},{"elementType":"labels.text.fill","stylers":[{"saturation":36},{"color":"#333333"},{"lightness":40}]},{"elementType":"labels.icon","stylers":[{"visibility":"off"}]},{"featureType":"transit","elementType":"geometry","stylers":[{"color":"#f2f2f2"},{"lightness":19}]},{"featureType":"administrative","elementType":"geometry.fill","stylers":[{"color":"#fefefe"},{"lightness":20}]},{"featureType":"administrative","elementType":"geometry.stroke","stylers":[{"color":"#fefefe"},{"lightness":17},{"weight":1.2}]}]
   });
 
-  var infowindow = new google.maps.InfoWindow();
+  
   var bounds = new google.maps.LatLngBounds();
   var markers = [];
+  var infowindow;
+  infowindow = new google.maps.InfoWindow();
 
   for (i = 0; i < locations.length; i++) {
-
 
 
     var title = locations[i][0];
@@ -158,51 +159,50 @@ function initialize() {
     var type = locations[i][7];
     var size = locations[i][8];
     var location = locations[i][9];
-    var content = 
-    '<a href=' + '"' + url + '"' + 'class=' + '"' + 'property_box map' + '"' + '>' +
-      '<div class="image-wrap">' +
-        '<div class="preview-image" style=' + '"background-image: url(' + image + '">' + 
-        '</div>' +
-      '</div>' +
-      
-      '<div class=' + '"' + 'property_tile_info' + '"' + '>' +
-        '<div class=' + '"' + 'top-info' + '"' + '>' +
-          '<span class=' + '"' + 'prop-title' + '"' + '>' + title + '</span>' +
-          '<div class=' + '"' + 'spacer' + '"' + '>' +'</div>' +
-          '<span class=' + '"' + 'prop-price' + '"' + '>' + price + '</span>' +
-          '<div class=' + '"' + 'spacer' + '"' + '>' +'</div>' +
-          '<span class=' + '"' + 'prop-details' + '"' + '>' + type + '</span>' +
-          '<div class=' + '"' + 'spacer' + '"' + '>' +'</div>' +
-          '<span class=' + '"' + 'prop-details' + '"' + '>' + size + '<sup>2</sup>' + '</span>' +
-          '<div class=' + '"' + 'spacer' + '"' + '>' +'</div>' +
-          '<span class=' + '"' + 'prop-location' + '"' + '>' + location + '</span>' +
-        '</div>' +
-        '<div class=' + '"' + 'bottom-info' + '"' + '>' +
-        '</div>' +
-      '</div>' +
-    '</a>';
-
-    var infowindow = new google.maps.InfoWindow();
 
     markers.push(infowindow);
+
+    
 
     marker = new google.maps.Marker({
       position: new google.maps.LatLng(locations[i][1], locations[i][2]),
       map: map,
-      icon: icon  
+      icon: locations[i][5]
     });
 
     bounds.extend(marker.position);
 
     google.maps.event.addListener(marker, 'click', (function (marker, i) {
       return function () {
-        infowindow.setContent(content);
+        infowindow.setContent(
+        '<a href=' + '"' + locations[i][3] + '"' + 'class=' + '"' + 'property_box map' + '"' + '>' +
+          '<div class="image-wrap">' +
+            '<div class="preview-image" style=' + '"background-image: url(' + locations[i][4] + '">' + 
+            '</div>' +
+          '</div>' +
+          
+          '<div class=' + '"' + 'property_tile_info' + '"' + '>' +
+            '<div class=' + '"' + 'top-info' + '"' + '>' +
+              '<span class=' + '"' + 'prop-title' + '"' + '>' + locations[i][0] + '</span>' +
+              '<div class=' + '"' + 'spacer' + '"' + '>' +'</div>' +
+              '<span class=' + '"' + 'prop-price' + '"' + '>' + locations[i][6] + '</span>' +
+              '<div class=' + '"' + 'spacer' + '"' + '>' +'</div>' +
+              '<span class=' + '"' + 'prop-details' + '"' + '>' + locations[i][7] + '</span>' +
+              '<div class=' + '"' + 'spacer' + '"' + '>' +'</div>' +
+              '<span class=' + '"' + 'prop-details' + '"' + '>' + locations[i][8] + '<sup>2</sup>' + '</span>' +
+              '<div class=' + '"' + 'spacer' + '"' + '>' +'</div>' +
+              '<span class=' + '"' + 'prop-location' + '"' + '>' + locations[i][9] + '</span>' +
+            '</div>' +
+            '<div class=' + '"' + 'bottom-info' + '"' + '>' +
+            '</div>' +
+          '</div>' +
+        '</a>');
         infowindow.open(map, marker);
       }
     })(marker, i));
 
     google.maps.event.addListener(map, "click", function(event) {
-        for (var i = 0; i < markers.length; i++ ) {  //I assume you have your infoboxes in some array
+        for (var i = 0; i < markers.length; i++ ) {
              markers[i].close();
         }
     });
@@ -223,10 +223,6 @@ function loadScript() {
   script.type = 'text/javascript';
   script.src = 'https://maps.googleapis.com/maps/api/js?key=AIzaSyDNoSfsI1ielEAA_2AX1XgZAb8eMaXG6Y4&' + 'callback=initialize';
   document.body.appendChild(script);
-}
-
-function test() {
-  console.log('foo');
 }
 
 window.onload = loadScript();
