--- a/statamic/_themes/main/templates/landing.html
+++ b/statamic/_themes/main/templates/landing.html
@@ -56,7 +56,7 @@
 
 
 
-{{ entries:listing folder="properties/new-york/sale|properties/new-york/rental" sort_by="random" show_future="true" }}
+{{ entries:listing folder="properties/new-york/sale" sort_by="random" show_future="true" }}
 {{ if no_results }}
 {{ else }}
 {{ if first }}
@@ -129,7 +129,7 @@
 
 
 
-{{ entries:listing folder="properties/international/sale|properties/international/rental" sort_by="random" show_future="true" }}
+{{ entries:listing folder="properties/international/sale" sort_by="random" show_future="true" }}
 {{ if no_results }}
 {{ else }}
 {{ if first }}
