--- a/statamic/_themes/main/templates/properties.html
+++ b/statamic/_themes/main/templates/properties.html
@@ -103,7 +103,7 @@
           <a href="{{ url }}"><i class='fa fa-th-large'></i>Grid View</a>
         </li>
         <li>
-          <a class="active" id="map-link"><i class='fa fa-map-marker'></i>Map View</a>
+          <a class="active" href="{{ url }}?view=map" id="map-link"><i class='fa fa-map-marker'></i>Map View</a>
         </li>
       </ul>
     </div>
