--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -3445,18 +3445,20 @@ nav li .current.muted:hover {
   z-index: 1000;
   display: none;
   float: left;
-  min-width: 160px;
   padding: 0;
   margin: 2px 0 0;
   list-style: none;
   font-size: 13px;
   line-height: 24px;
   text-align: left;
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.7);
   border: none;
   border-radius: 0;
   box-shadow: none;
   background-clip: padding-box; }
+
+.dropdown-menu li {
+  background-color: transparent; }
 
 .nav .open > a, .nav .open > a:hover, .nav .open > a:focus {
   background-color: white;
