--- a/statamic/_themes/main/templates/properties_international.html
+++ b/statamic/_themes/main/templates/properties_international.html
@@ -86,4 +86,154 @@
 </script>
 {{ if get:view != "map" }}
 <div id="properties"></div>
+{{ else }}
+<div class="property_nav dark_gray leading properties_grid">
+  <div class="container">
+    <div class="rent-or-buy">
+      <ul>
+        <li><a  id="buy" class="active">Buy</a></li>
+        <li><a  id="rent"> Rent</a></li>
+      </ul>
+    </div>
+    <div class='view-type'>
+      <ul class='views'>
+        <li>
+          <a href="{{ url }}"><i class='fa fa-th-large'></i>Grid View</a>
+        </li>
+        <li>
+          <a class="active" href="{{ url }}?view=map" id="map-link"><i class='fa fa-map-marker'></i>Map View</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
+<section style="padding: 0 !important" class="bg-gray">
+
+<script type="text/javascript">
+
+
+
+function initialize() {
+  var locations = [
+  {{ entries:listing folder="properties/international/sale"}}
+  [
+  '{{ title }}', 
+  {{ location }}
+  {{ latitude}},
+  {{ longitude }}{{/location}},
+  '{{url}}',
+  '{{ preview_image }}',
+  {{ if openhouse == "1" }}'../_themes/main/img/map_marker_red.svg'{{ else }}'../_themes/main/img/map_marker_green.svg'{{endif}},
+  '{{ if currency == "dollars" }}${{ elseif currency == "sterling" }}£{{ elseif currency == "euros" }}€{{ elseif currency == "none" }}{{ else }}${{ endif }}{{ if streeteasy_type == "rental"}}{{ price|format_number }}/month{{ else }}{{ price|format_number }}{{ endif }}',
+  '{{ property_type }}',
+  '{{ sqft|format_number }} ft',
+  '{{ property_location }}'
+  ],
+  {{ /entries:listing }}
+  ];
+
+  window.map = new google.maps.Map(document.getElementById('map'), {
+    mapTypeId: google.maps.MapTypeId.ROADMAP,
+    scrollwheel: false,
+    styles: [{"featureType":"water","elementType":"geometry","stylers":[{"color":"#e9e9e9"},{"lightness":17}]},{"featureType":"landscape","elementType":"geometry","stylers":[{"color":"#f5f5f5"},{"lightness":20}]},{"featureType":"road.highway","elementType":"geometry.fill","stylers":[{"color":"#ffffff"},{"lightness":17}]},{"featureType":"road.highway","elementType":"geometry.stroke","stylers":[{"color":"#ffffff"},{"lightness":29},{"weight":0.2}]},{"featureType":"road.arterial","elementType":"geometry","stylers":[{"color":"#ffffff"},{"lightness":18}]},{"featureType":"road.local","elementType":"geometry","stylers":[{"color":"#ffffff"},{"lightness":16}]},{"featureType":"poi","elementType":"geometry","stylers":[{"color":"#f5f5f5"},{"lightness":21}]},{"featureType":"poi.park","elementType":"geometry","stylers":[{"color":"#dedede"},{"lightness":21}]},{"elementType":"labels.text.stroke","stylers":[{"visibility":"on"},{"color":"#ffffff"},{"lightness":16}]},{"elementType":"labels.text.fill","stylers":[{"saturation":36},{"color":"#333333"},{"lightness":40}]},{"elementType":"labels.icon","stylers":[{"visibility":"off"}]},{"featureType":"transit","elementType":"geometry","stylers":[{"color":"#f2f2f2"},{"lightness":19}]},{"featureType":"administrative","elementType":"geometry.fill","stylers":[{"color":"#fefefe"},{"lightness":20}]},{"featureType":"administrative","elementType":"geometry.stroke","stylers":[{"color":"#fefefe"},{"lightness":17},{"weight":1.2}]}]
+  });
+
+  
+  var bounds = new google.maps.LatLngBounds();
+  var markers = [];
+  var infowindow;
+  infowindow = new google.maps.InfoWindow();
+
+  for (i = 0; i < locations.length; i++) {
+
+
+    var title = locations[i][0];
+    var lat = locations[i][1];
+    var long = locations[i][2];
+    var url = locations[i][3];
+    var image = locations[i][4];
+    var icon = locations[i][5];
+    var price = locations[i][6];
+    var type = locations[i][7];
+    var size = locations[i][8];
+    var location = locations[i][9];
+
+    markers.push(infowindow);
+
+    
+
+    marker = new google.maps.Marker({
+      position: new google.maps.LatLng(locations[i][1], locations[i][2]),
+      map: map,
+      icon: locations[i][5]
+    });
+
+    bounds.extend(marker.position);
+
+    google.maps.event.addListener(marker, 'click', (function (marker, i) {
+      return function () {
+        infowindow.setContent(
+        '<a href=' + '"' + locations[i][3] + '"' + 'class=' + '"' + 'property_box map' + '"' + '>' +
+          '<div class="image-wrap">' +
+            '<div class="preview-image" style=' + '"background-image: url(' + locations[i][4] + '">' + 
+            '</div>' +
+          '</div>' +
+          
+          '<div class=' + '"' + 'property_tile_info' + '"' + '>' +
+            '<div class=' + '"' + 'top-info' + '"' + '>' +
+              '<span class=' + '"' + 'prop-title' + '"' + '>' + locations[i][0] + '</span>' +
+              '<div class=' + '"' + 'spacer' + '"' + '>' +'</div>' +
+              '<span class=' + '"' + 'prop-price' + '"' + '>' + locations[i][6] + '</span>' +
+              '<div class=' + '"' + 'spacer' + '"' + '>' +'</div>' +
+              '<span class=' + '"' + 'prop-details' + '"' + '>' + locations[i][7] + '</span>' +
+              '<div class=' + '"' + 'spacer' + '"' + '>' +'</div>' +
+              '<span class=' + '"' + 'prop-details' + '"' + '>' + locations[i][8] + '<sup>2</sup>' + '</span>' +
+              '<div class=' + '"' + 'spacer' + '"' + '>' +'</div>' +
+              '<span class=' + '"' + 'prop-location' + '"' + '>' + locations[i][9] + '</span>' +
+            '</div>' +
+            '<div class=' + '"' + 'bottom-info' + '"' + '>' +
+            '</div>' +
+          '</div>' +
+        '</a>');
+        infowindow.open(map, marker);
+      }
+    })(marker, i));
+
+    google.maps.event.addListener(map, "click", function(event) {
+        for (var i = 0; i < markers.length; i++ ) {
+             markers[i].close();
+        }
+    });
+  }
+
+  map.fitBounds(bounds);
+
+  var listener = google.maps.event.addListener(map, "idle", function () {
+    map.setZoom(13);
+    google.maps.event.removeListener(listener);
+  });
+
+
+}
+
+function loadScript() {
+  var script = document.createElement('script');
+  script.type = 'text/javascript';
+  script.src = 'https://maps.googleapis.com/maps/api/js?key=AIzaSyDNoSfsI1ielEAA_2AX1XgZAb8eMaXG6Y4&' + 'callback=initialize';
+  document.body.appendChild(script);
+}
+
+window.onload = loadScript();
+
+
+
+
+
+
+
+</script>
+
+  <div id="map"></div>
+
+</section>
 {{ endif }}
