--- a/statamic/_themes/main/templates/404.html
+++ b/statamic/_themes/main/templates/404.html
@@ -1,13 +1,9 @@
-<div class="row">
-	<div class="eight columns">
-		<div class="article">
-			<h1>{{ title }}</h1>
-
-			{{ content|widont }}
+<section class="hero leading dark">
+	<div class="container">
+		<div class="hero-container">
+			<h1>404 Page Not Found</h1>
+			<h5>You've entered an incorrect web address.</h5>
+			<a href="{{ _site_root }}" class="btn btn-garfield">Return Home</a>
 		</div>
 	</div>
-	<div class="four columns sidebar" role="complementary">
-		{{ theme:partial src="sub-navigation" }}		
-		{{ theme:partial src="common-sidebar" }}
-	</div>
-</div>
+</section>	
