--- a/statamic/_themes/main/templates/404.html
+++ b/statamic/_themes/main/templates/404.html
@@ -3,7 +3,7 @@
 		<div class="hero-container">
 			<h1>404 Page Not Found</h1>
 			<h5>You've entered an incorrect web address.</h5>
-			<a href="{{ _site_root }}" class="btn btn-garfield">Return Home</a>
+			<a href="http://lesliegarfield.com" class="btn btn-garfield">Return Home</a>
 		</div>
 	</div>
 </section>	
