--- a/src/scss/components/_maps.scss
+++ b/src/scss/components/_maps.scss
@@ -11,7 +11,11 @@
 
 .neighborhood #map {
 	width: 100%;
-	height: 800px;
+	height: 400px;
+	@include breakpoint($small) {
+		height: 800px;
+	}
+	
 	margin-top: $bPadding;
 }
 
