--- a/statamic/_themes/main/templates/company.html
+++ b/statamic/_themes/main/templates/company.html
@@ -25,7 +25,7 @@
 			<div class="company inner-content">
 				<span class="section-title">OUR HISTORY</span>
 				<div class="divider"></div>
-				<h3>Townhouse and small building specialists since 1972</h3>
+				<h3>TTOWNHOUSE AND SMALL BUILDING SPECIALISTS SINCE 1972</h3>
 				<div class="divider"></div>
 				{{ history }}
 			</div>
