new beauchamp logic

--- a/statamic/_themes/main/templates/property.html
+++ b/statamic/_themes/main/templates/property.html
@@ -26,7 +26,7 @@
 						<img src="../../../_themes/main/img/beauchamp.jpg" class="img-circle" />
 					</a>
 					<div class="agent-details">
-						<a href="http://beauchampestates.com"><span>Beauchamp Estates</span></a>
+						<a href="http://beauchampestates.com" target="_blank"><span>Beauchamp Estates</span></a>
 						<ul>
 							<li>{{ theme:partial src="svg/phone" }} +44 (0) 20 7499 7722</li>
 							<li>{{ theme:partial src="svg/mail" }}<a href="mailto:info@beauchamp.co.uk">info@beauchamp.co.uk</a></li>
