--- a/statamic/_themes/main/templates/neighborhood_individual.html
+++ b/statamic/_themes/main/templates/neighborhood_individual.html
@@ -259,7 +259,7 @@ function initialize() {
   }
 
 
-  map.fitBounds(bounds);
+  // map.fitBounds(bounds);
 
   var listener = google.maps.event.addListener(map, "idle", function () {
     // map.setZoom(13);
