--- a/statamic/_themes/main/templates/neighborhood_individual.html
+++ b/statamic/_themes/main/templates/neighborhood_individual.html
@@ -144,7 +144,7 @@ function initialize() {
 
   map = new google.maps.Map(document.getElementById('map'), {
     center: {lat: {{ location }}{{latitude}}{{/location}}, lng: {{ location }}{{longitude}}{{/location}}},
-    zoom: 15,
+    zoom: {{ zoom_level }},
     scrollwheel: false,
     styles: [
     	{"featureType":"water","elementType":"geometry","stylers":[{"color":"#e9e9e9"},{"lightness":17}]},
