--- a/statamic/_themes/main/templates/properties.html
+++ b/statamic/_themes/main/templates/properties.html
@@ -93,8 +93,8 @@
 	<div class="container">
 		<div class="rent-or-buy">
 			<ul>
-				<li><a  id="buy" class="active">Buy</a></li>
-				<li><a  id="rent"> Rent</a></li>
+				<li><a id="buy" class="active">Buy</a></li>
+				<li><a id="rent"> Rent</a></li>
 			</ul>
 		</div>
     <div class='view-type'>
@@ -116,8 +116,26 @@
 
 
 function initialize() {
-  var locations = [
+  var sale_properties = [
   {{ entries:listing folder="properties/new-york/sale"}}
+  [
+  '{{ title }}', 
+  {{ location }}
+  {{ latitude}},
+  {{ longitude }}{{/location}},
+  '{{url}}',
+  '{{ preview_image }}',
+  {{ if openhouse == "1" }}'../_themes/main/img/map_marker_red.svg'{{ else }}'../_themes/main/img/map_marker_green.svg'{{endif}},
+  '{{ if currency == "dollars" }}${{ elseif currency == "sterling" }}£{{ elseif currency == "euros" }}€{{ elseif currency == "none" }}{{ else }}${{ endif }}{{ if streeteasy_type == "rental"}}{{ price|format_number }}/month{{ else }}{{ price|format_number }}{{ endif }}',
+  '{{ property_type }}',
+  '{{ sqft|format_number }} ft',
+  '{{ property_location }}'
+  ],
+  {{ /entries:listing }}
+  ];
+
+  var rental_properties = [
+  {{ entries:listing folder="properties/new-york/rental"}}
   [
   '{{ title }}', 
   {{ location }}
@@ -140,34 +158,35 @@ function initialize() {
     styles: [{"featureType":"water","elementType":"geometry","stylers":[{"color":"#e9e9e9"},{"lightness":17}]},{"featureType":"landscape","elementType":"geometry","stylers":[{"color":"#f5f5f5"},{"lightness":20}]},{"featureType":"road.highway","elementType":"geometry.fill","stylers":[{"color":"#ffffff"},{"lightness":17}]},{"featureType":"road.highway","elementType":"geometry.stroke","stylers":[{"color":"#ffffff"},{"lightness":29},{"weight":0.2}]},{"featureType":"road.arterial","elementType":"geometry","stylers":[{"color":"#ffffff"},{"lightness":18}]},{"featureType":"road.local","elementType":"geometry","stylers":[{"color":"#ffffff"},{"lightness":16}]},{"featureType":"poi","elementType":"geometry","stylers":[{"color":"#f5f5f5"},{"lightness":21}]},{"featureType":"poi.park","elementType":"geometry","stylers":[{"color":"#dedede"},{"lightness":21}]},{"elementType":"labels.text.stroke","stylers":[{"visibility":"on"},{"color":"#ffffff"},{"lightness":16}]},{"elementType":"labels.text.fill","stylers":[{"saturation":36},{"color":"#333333"},{"lightness":40}]},{"elementType":"labels.icon","stylers":[{"visibility":"off"}]},{"featureType":"transit","elementType":"geometry","stylers":[{"color":"#f2f2f2"},{"lightness":19}]},{"featureType":"administrative","elementType":"geometry.fill","stylers":[{"color":"#fefefe"},{"lightness":20}]},{"featureType":"administrative","elementType":"geometry.stroke","stylers":[{"color":"#fefefe"},{"lightness":17},{"weight":1.2}]}]
   });
 
-  
+  var buy = $('#buy');
+  var rent = $('#rent');
   var bounds = new google.maps.LatLngBounds();
-  var markers = [];
-  var infowindow;
-  infowindow = new google.maps.InfoWindow();
+  var infoWindows = [];
+  var infowindow = new google.maps.InfoWindow();
+  var marker = new google.maps.Marker();
+  var saleMarkers = [];
+  var rentalMarkers = [];
 
-  for (i = 0; i < locations.length; i++) {
+  for (i = 0; i < sale_properties.length; i++) {
 
+    var title = sale_properties[i][0];
+    var lat = sale_properties[i][1];
+    var long = sale_properties[i][2];
+    var url = sale_properties[i][3];
+    var image = sale_properties[i][4];
+    var icon = sale_properties[i][5];
+    var price = sale_properties[i][6];
+    var type = sale_properties[i][7];
+    var size = sale_properties[i][8];
+    var location = sale_properties[i][9];
 
-    var title = locations[i][0];
-    var lat = locations[i][1];
-    var long = locations[i][2];
-    var url = locations[i][3];
-    var image = locations[i][4];
-    var icon = locations[i][5];
-    var price = locations[i][6];
-    var type = locations[i][7];
-    var size = locations[i][8];
-    var location = locations[i][9];
-
-    markers.push(infowindow);
-
-    
+    infoWindows.push(infowindow);
+    saleMarkers.push(marker);
 
     marker = new google.maps.Marker({
-      position: new google.maps.LatLng(locations[i][1], locations[i][2]),
+      position: new google.maps.LatLng(sale_properties[i][1], sale_properties[i][2]),
       map: map,
-      icon: locations[i][5]
+      icon: sale_properties[i][5],
     });
 
     bounds.extend(marker.position);
@@ -175,23 +194,23 @@ function initialize() {
     google.maps.event.addListener(marker, 'click', (function (marker, i) {
       return function () {
         infowindow.setContent(
-        '<a href=' + '"' + locations[i][3] + '"' + 'class=' + '"' + 'property_box map' + '"' + '>' +
+        '<a href=' + '"' + sale_properties[i][3] + '"' + 'class=' + '"' + 'property_box map' + '"' + '>' +
           '<div class="image-wrap">' +
-            '<div class="preview-image" style=' + '"background-image: url(' + locations[i][4] + '">' + 
+            '<div class="preview-image" style=' + '"background-image: url(' + sale_properties[i][4] + '">' + 
             '</div>' +
           '</div>' +
           
           '<div class=' + '"' + 'property_tile_info' + '"' + '>' +
             '<div class=' + '"' + 'top-info' + '"' + '>' +
-              '<span class=' + '"' + 'prop-title' + '"' + '>' + locations[i][0] + '</span>' +
+              '<span class=' + '"' + 'prop-title' + '"' + '>' + sale_properties[i][0] + '</span>' +
               '<div class=' + '"' + 'spacer' + '"' + '>' +'</div>' +
-              '<span class=' + '"' + 'prop-price' + '"' + '>' + locations[i][6] + '</span>' +
+              '<span class=' + '"' + 'prop-price' + '"' + '>' + sale_properties[i][6] + '</span>' +
               '<div class=' + '"' + 'spacer' + '"' + '>' +'</div>' +
-              '<span class=' + '"' + 'prop-details' + '"' + '>' + locations[i][7] + '</span>' +
+              '<span class=' + '"' + 'prop-details' + '"' + '>' + sale_properties[i][7] + '</span>' +
               '<div class=' + '"' + 'spacer' + '"' + '>' +'</div>' +
-              '<span class=' + '"' + 'prop-details' + '"' + '>' + locations[i][8] + '<sup>2</sup>' + '</span>' +
+              '<span class=' + '"' + 'prop-details' + '"' + '>' + sale_properties[i][8] + '<sup>2</sup>' + '</span>' +
               '<div class=' + '"' + 'spacer' + '"' + '>' +'</div>' +
-              '<span class=' + '"' + 'prop-location' + '"' + '>' + locations[i][9] + '</span>' +
+              '<span class=' + '"' + 'prop-location' + '"' + '>' + sale_properties[i][9] + '</span>' +
             '</div>' +
             '<div class=' + '"' + 'bottom-info' + '"' + '>' +
             '</div>' +
@@ -202,11 +221,96 @@ function initialize() {
     })(marker, i));
 
     google.maps.event.addListener(map, "click", function(event) {
-        for (var i = 0; i < markers.length; i++ ) {
-             markers[i].close();
+        for (var i = 0; i < infoWindows.length; i++ ) {
+             infoWindows[i].close();
         }
     });
   }
+
+  for (i = 0; i < rental_properties.length; i++) {
+
+    var title = rental_properties[i][0];
+    var lat = rental_properties[i][1];
+    var long = rental_properties[i][2];
+    var url = rental_properties[i][3];
+    var image = rental_properties[i][4];
+    var icon = rental_properties[i][5];
+    var price = rental_properties[i][6];
+    var type = rental_properties[i][7];
+    var size = rental_properties[i][8];
+    var location = rental_properties[i][9];
+
+    infoWindows.push(infowindow);
+    rentalMarkers.push(marker);
+
+    marker = new google.maps.Marker({
+      position: new google.maps.LatLng(rental_properties[i][1], rental_properties[i][2]),
+      map: map,
+      icon: rental_properties[i][5],
+      visible: false
+    });
+
+    bounds.extend(marker.position);
+
+    google.maps.event.addListener(marker, 'click', (function (marker, i) {
+      return function () {
+        infowindow.setContent(
+        '<a href=' + '"' + rental_properties[i][3] + '"' + 'class=' + '"' + 'property_box map' + '"' + '>' +
+          '<div class="image-wrap">' +
+            '<div class="preview-image" style=' + '"background-image: url(' + rental_properties[i][4] + '">' + 
+            '</div>' +
+          '</div>' +
+          
+          '<div class=' + '"' + 'property_tile_info' + '"' + '>' +
+            '<div class=' + '"' + 'top-info' + '"' + '>' +
+              '<span class=' + '"' + 'prop-title' + '"' + '>' + rental_properties[i][0] + '</span>' +
+              '<div class=' + '"' + 'spacer' + '"' + '>' +'</div>' +
+              '<span class=' + '"' + 'prop-price' + '"' + '>' + rental_properties[i][6] + '</span>' +
+              '<div class=' + '"' + 'spacer' + '"' + '>' +'</div>' +
+              '<span class=' + '"' + 'prop-details' + '"' + '>' + rental_properties[i][7] + '</span>' +
+              '<div class=' + '"' + 'spacer' + '"' + '>' +'</div>' +
+              '<span class=' + '"' + 'prop-details' + '"' + '>' + rental_properties[i][8] + '<sup>2</sup>' + '</span>' +
+              '<div class=' + '"' + 'spacer' + '"' + '>' +'</div>' +
+              '<span class=' + '"' + 'prop-location' + '"' + '>' + rental_properties[i][9] + '</span>' +
+            '</div>' +
+            '<div class=' + '"' + 'bottom-info' + '"' + '>' +
+            '</div>' +
+          '</div>' +
+        '</a>');
+        infowindow.open(map, marker);
+      }
+    })(marker, i));
+
+    google.maps.event.addListener(map, "click", function(event) {
+        for (var i = 0; i < infoWindows.length; i++ ) {
+             infoWindows[i].close();
+        }
+    });
+  }
+
+  $('#buy').click(function() {
+      for (var i = 0; i < saleMarkers.length; i++ ) {
+           saleMarkers[i].setVisible(true);
+      }
+      for (var i = 0; i < rentalMarkers.length; i++ ) {
+           rentalMarkers[i].setVisible(false);
+      }
+      for (var i = 0; i < infoWindows.length; i++ ) {
+           infoWindows[i].close();
+      }
+      
+  });
+  $('#rent').click(function() {
+      for (var i = 0; i < rentalMarkers.length; i++ ) {
+           rentalMarkers[i].setVisible(true);
+      }
+      for (var i = 0; i < saleMarkers.length; i++ ) {
+           saleMarkers[i].setVisible(false);
+      }
+      for (var i = 0; i < infoWindows.length; i++ ) {
+           infoWindows[i].close();
+      }
+  });
 
   map.fitBounds(bounds);
 
@@ -214,7 +318,6 @@ function initialize() {
     map.setZoom(13);
     google.maps.event.removeListener(listener);
   });
-
 
 }
 
@@ -226,12 +329,6 @@ function loadScript() {
 }
 
 window.onload = loadScript();
-
-
-
-
-
-
 
 </script>
 
